second commit slide nav is working

--- a/dump.html
+++ b/dump.html
@@ -46,5 +46,11 @@
         PY Chart Here
       </div>
     </div>
+
+
+    <div class="download">
+      <button class="btn primary-color">Download PDF<span><i class="fas
+            fa-file-pdf"></i></span></button>
+    </div>
   </body>
 </html>
